@@ -1,0 +1,76 @@
+#!comment: The following dictionary contains a list of well-known RTSP URLs
+#!comment: used by common video surveillance equipment.
+/
+/1.AMP
+/1/stream1
+/CAM_ID.password.mp2
+/CH001.sdp
+/GetData.cgi
+/MediaInput/h264
+/MediaInput/mpeg4
+/VideoInput/1/h264/1
+/access_code
+/access_name_for_stream_1_to_5
+/av0_0
+/av2
+/avn=2
+/axis-media/media.amp
+/cam
+/cam0_0
+/cam0_1
+/cam1/h264
+/cam1/h264/multicast
+/cam1/mjpeg
+/cam1/mpeg4
+/camera.stm
+/ch0
+/ch001.sdp
+/ch0_unicast_firststream
+/ch0_unicast_secondstream
+/channel1
+/h264
+/h264/media.amp
+/image.mpg
+/img/media.sav
+/img/video.asf
+/img/video.sav
+/ioImage/1
+/ipcam.sdp
+/ipcam_h264.sdp
+/live.sdp
+/live/h264
+/live/mpeg4
+/live_mpeg4.sdp
+/livestream
+/livestream/
+/media/media.amp
+/media/video1
+/mjpeg/media.smp
+/mp4
+/mpeg4
+/mpeg4/1/media.amp
+/mpeg4/media.amp
+/mpeg4/media.smp
+/mpeg4unicast
+/mpg4/rtsp.amp
+/multicaststream
+/now.mp4
+/nph-h264.cgi
+/nphMpeg4/g726-640x
+/nphMpeg4/g726-640x480
+/nphMpeg4/nil-320x240
+/play1.sdp
+/play2.sdp
+/rtpvideo1.sdp
+/rtsp_tunnel
+/rtsph264
+/stream1
+/user.pin.mp2
+/user_defined
+/video
+/video.3gp
+/video.mp4
+/video1
+/video1+audio1
+/vis
+/wfov
